--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "gapi-script": "^1.2.0",
     "gh-pages": "^6.2.0",
+    "googleapis": "^144.0.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0",
     "node-cron": "^3.0.3",
